--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -35,7 +35,7 @@ Environmental damage caused by the use must be kept as small as possible.
                                 url="/dashboard.xhtml" icon="ui-icon-home"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('internal/events/')}"
-                                value="Veranstaltungen"
+                                value="Termine"
                                 url="/internal/events/browse.xhtml"
                                 icon="ui-icon-calendar" rendered="#{userSession.loggedIn}"/>
 
