--- a/src/main/webapp/internal/events/abo.xhtml
+++ b/src/main/webapp/internal/events/abo.xhtml
@@ -61,6 +61,6 @@ Environmental damage caused by the use must be kept as small as possible.
         >
     <ui:define name="eventContent">
 
-    test
+        Abboniere den Kalender in Outlook, Google, Android, IPhone ...
     </ui:define>
 </ui:composition>
