--- a/src/main/webapp/internal/events/browse.xhtml
+++ b/src/main/webapp/internal/events/browse.xhtml
@@ -45,7 +45,8 @@ Environmental damage caused by the use must be kept as small as possible.
 
             <p/>
             <p:panel style="width:182px;">
-                <p:selectManyCheckbox layout="pageDirection" value="#{eventModel.selectedTypeFilters}" onchange="$('#eventFilterForm-refresh').click()">
+                <p:selectManyCheckbox layout="pageDirection" value="#{eventModel.selectedTypeFilters}"
+                                      onchange="$('#eventFilterForm-refresh').click()">
                     <f:selectItems value="#{eventModel.typeFilters}"/>
                 </p:selectManyCheckbox>
             </p:panel>
@@ -55,7 +56,27 @@ Environmental damage caused by the use must be kept as small as possible.
         </h:form>
     </ui:define>
     <ui:define name="eventContent">
+        <ui:repeat value="#{eventModel.eventsToDisplay}" var="event">
+            <p:panel header="#{event.headLine}">
+                <h:panelGrid columns="2" columnClasses="column" cellpadding="5">
+                    <h:outputText value="Enladender:"/>
+                    <h:panelGroup>
+                        <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{event.user.id}">
+                            <img src="#{event.user.gravatarHeaderUrl49}"
+                                 alt="avatar #{event.user.displayName}"/>
+                            <h:outputText value="#{event.user.id} - #{event.user.displayName}"/>
+                        </a>
+                    </h:panelGroup>
+                    <h:outputText value="Zeit:"/>
+                    <h:outputText value="#{event.period}"/>
 
-        test
+                    <h:outputText value="Beschreibung:"/>
+                    <h:outputText value="#{event.content}"/>
+
+                    <h:outputText value="Ort:"/>
+                    <h:outputText value="#{event.location}"/>
+                </h:panelGrid>
+            </p:panel>
+        </ui:repeat>
     </ui:define>
 </ui:composition>
