--- a/src/main/webapp/internal/events/create.xhtml
+++ b/src/main/webapp/internal/events/create.xhtml
@@ -61,6 +61,6 @@ Environmental damage caused by the use must be kept as small as possible.
         >
     <ui:define name="eventContent">
 
-    test
+    Veranstaltung erstellen
     </ui:define>
 </ui:composition>
