--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -44,7 +44,7 @@ Environmental damage caused by the use must be kept as small as possible.
     </script>
 </h:head>
 <h:body>
-    <div class="header">
+    <div class="header ui-widget-content">
         <div class="container">
             <p:growl id="messages"/>
             <a href="${pageContext.request.servletPath}/dashboard.xhtml">
