--- a/src/main/webapp/links.xhtml
+++ b/src/main/webapp/links.xhtml
@@ -29,6 +29,9 @@ Environmental damage caused by the use must be kept as small as possible.
     <ui:define name="contentWithMenu">
 
 
+        #{resource['primefaces-ring:images/ui-bg_diagonals-thick_15_444444_40x40.png']}
+        rrr
+
         #{userSession.activeMenu('dashboard')}
         #{facesContext.viewRoot.viewId.substring(1)}
         #{facesContext.viewRoot.viewId.startsWith('/dashboard')?'acticMenuItem':''}
