new theme growl, logout corrected

--- a/src/main/webapp/logout/logout.xhtml
+++ b/src/main/webapp/logout/logout.xhtml
@@ -33,7 +33,7 @@ Environmental damage caused by the use must be kept as small as possible.
     <h:outputStylesheet name="style/style.css"/>
 </h:head>
 <h:body>
-    <div class="header">
+    <div class="header ui-widget-content">
         <div class="container">
 
             <a href="${pageContext.request.servletPath}/dashboard.xhtml">
