--- a/src/main/webapp/internal/members/user.xhtml
+++ b/src/main/webapp/internal/members/user.xhtml
@@ -222,7 +222,7 @@ Environmental damage caused by the use must be kept as small as possible.
     </h:form>
 </p:panel>
 
-<p:panel header="Anzeigen" rendered="#{not empty userModel.selectedUser.advertisements}">
+<p:panel header="Anzeigen" rendered="#{userModel.other and not empty userModel.selectedUser.advertisements}">
     <p:dataTable id="advertisementTable" var="advertisement" value="#{userModel.selectedUser.advertisements}"
                  styleClass="ui-corner-all">
         <p:column id="title" sortBy="#{advertisement.title}">
