new button with myAdvertisements

--- a/src/main/webapp/internal/advertisements/myAdvertisements.xhtml
+++ b/src/main/webapp/internal/advertisements/myAdvertisements.xhtml
@@ -36,6 +36,7 @@ Environmental damage caused by the use must be kept as small as possible.
                     <p:menuitem value="Auswähl umkehren" url="#"
                                 icon="ui-icon-info"/>
                 </p:splitButton>
+                <p:button outcome="/dashboard.xhtml" value="Neu" icon="ui-icon-document"/>
                 <p:button outcome="/dashboard.xhtml" value="Loschen" icon="ui-icon-trash"/>
                 <p:button outcome="/dashboard.xhtml" value="Deaktivieren" icon="ui-icon-stop"/>
                 <p:button outcome="/dashboard.xhtml" value="Aktivieren / Verlängern" icon="ui-icon-play"/>
