--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -26,6 +26,10 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui" xmlns:h="http://java.sun.com/jsf/html">
     <ui:define name="contentWithMenu">
+        <p:panel style="background: #ffffff" rendered="#{userSession.notLoggedIn}">
+            <h:graphicImage name="/img/header.gif" alt="logo"/>
+        </p:panel>
+
         <p:panel header="!!! Testseite !!!" style="background: red" rendered="#{userSession.notLoggedIn}">
             <p>Dies ist lediglich der Versuch einer neuen Tauschringseite.</p>
 
@@ -40,30 +44,6 @@ Environmental damage caused by the use must be kept as small as possible.
         </p:panel>
 
         <p:panel header="Kommende Termine" rendered="#{userSession.loggedIn}">
-            <p:dataTable var="event" value="#{userSession.next3EventsInternal}" rendered="false">
-                <p:column>
-                    <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{event.user.id}"><img
-                            src="#{event.user.gravatarUrl29}" alt="#{event.user.displayName}"/></a>
-                </p:column>
-                <p:column>
-                    <h:outputText value="#{event.dashboardDate}"/>
-                </p:column>
-                <p:column>
-                    <h:outputText value="#{event.period}"/>
-                </p:column>
-                <p:column>
-                    <h:outputText value="#{event.displayTitle}"/>
-                </p:column>
-
-                <p:column>
-                    <h:outputText value="#{event.content}"/>
-                </p:column>
-
-                <p:column>
-                    <h:outputText value="#{event.location}"/>
-                </p:column>
-
-            </p:dataTable>
 
             <div style="text-align: center">
                 <table class="borderlessTable">
@@ -76,8 +56,6 @@ Environmental damage caused by the use must be kept as small as possible.
                             <td><h:outputText value="#{event.dashboardDate}"/></td>
                             <td style="text-align: center"><h:outputText value="#{event.period}"/></td>
                             <td><h:outputText value="#{event.displayTitle}"/></td>
-                            <!--td><h:outputText value="#{event.content}"/></td>
-                            <td><h:outputText value="#{event.location}"/></td-->
                         </tr>
                     </ui:repeat>
                 </table>
@@ -90,20 +68,54 @@ Environmental damage caused by the use must be kept as small as possible.
             weitere Termine sind im eingeloggten Bereich sichtbar.
         </p:panel>
 
-        <p:panel header="Neuste Mitglieder" rendered="#{userSession.notLoggedIn}">
-            <ui:repeat value="#{userSession.getNewestMembers(8)}" var="member">
-                <img src="#{member.gravatarUrl80}"/>
-            </ui:repeat>
-        </p:panel>
 
-        <h:panelGroup layout="block" style="width: 100%" rendered="#{userSession.loggedIn}">
+
+        <h:panelGroup layout="block" style="width: 100%; vertical-align: bottom; display: inline-block;" rendered="#{userSession.loggedIn}">
             <p:panel header="Neuste Gesuche" rendered="#{userSession.loggedIn}" style="float: left; width: 46%;">
-
+                <table class="borderlessTable">
+                    <ui:repeat value="#{userSession.newestRequests}" var="advertisement">
+                        <tr>
+                            <td>
+                                <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{advertisement.owner.id}"><img
+                                        src="#{advertisement.owner.gravatarUrl29}" alt="#{advertisement.owner.displayName}"/></a>
+                            </td>
+                            <td>
+                                <a href="#{advertisement.browseUrl}">
+                                    <h:outputText value="#{advertisement.title}"/>
+                                </a>
+                            </td>
+                            <td>
+                                <a href="#{advertisement.browseCategoryUrl}">
+                                    <h:outputText value="#{advertisement.category.name}"/>
+                                </a>
+                            </td>
+                        </tr>
+                    </ui:repeat>
+                </table>
             </p:panel>
 
             <div style="width: 20px; float: left"><h:outputText value="&#160;"/></div>
             <p:panel header="Neuste Angebote" rendered="#{userSession.loggedIn}" style="overflow: auto">
-
+                <table class="borderlessTable">
+                    <ui:repeat value="#{userSession.newestOffers}" var="advertisement">
+                        <tr>
+                            <td>
+                                <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{advertisement.owner.id}"><img
+                                        src="#{advertisement.owner.gravatarUrl29}" alt="#{advertisement.owner.displayName}"/></a>
+                            </td>
+                            <td>
+                                <a href="#{advertisement.browseUrl}">
+                                <h:outputText value="#{advertisement.title}"/>
+                                </a>
+                            </td>
+                            <td>
+                                <a href="#{advertisement.browseCategoryUrl}">
+                                <h:outputText value="#{advertisement.category.name}"/>
+                                </a>
+                            </td>
+                        </tr>
+                    </ui:repeat>
+                </table>
             </p:panel>
         </h:panelGroup>
 
@@ -113,6 +125,11 @@ Environmental damage caused by the use must be kept as small as possible.
                         src="#{member.gravatarUrl80}" alt="#{member.displayName}"/></a>
             </ui:repeat>
         </p:panel>
+        <p:panel header="Neuste Mitglieder" rendered="#{userSession.notLoggedIn}">
+        <ui:repeat value="#{userSession.getNewestMembers(8)}" var="member">
+            <img src="#{member.gravatarUrl80}"/>
+        </ui:repeat>
+    </p:panel>
 
 
 
