improved new design

--- a/src/main/webapp/logout/logout.xhtml
+++ b/src/main/webapp/logout/logout.xhtml
@@ -42,6 +42,13 @@ Environmental damage caused by the use must be kept as small as possible.
             </a>
         </div>
     </div>
+    <div class="subheader">
+        <div class="container">
+            <div>
+                <h:graphicImage name="/img/header.gif" alt="logo"/>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div><p/>
 
@@ -49,7 +56,7 @@ Environmental damage caused by the use must be kept as small as possible.
 
             <p/>
 
-            <p>Danke für deinen Besuch</p>
+            <p style="color: #ffffff">Danke für deinen Besuch</p>
         </div>
         <div>
             <p:button icon="ui-icon-home" outcome="/dashboard.xhtml" value="zurück"/>
