--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -46,11 +46,19 @@ Environmental damage caused by the use must be kept as small as possible.
 <h:body>
     <div class="header ui-widget-content">
         <div class="container">
-            <p:growl id="messages"/>
-            <a href="${pageContext.request.servletPath}/dashboard.xhtml">
-                <h:graphicImage name="/img/logoGreen.png" alt="logo" styleClass="headerLogo"/><span id="headLine">Tauschring
+            <div style="width: 130px;float: left;">
+                <a href="${pageContext.request.servletPath}/dashboard.xhtml">
+                <h:graphicImage name="/img/logoGreen.png" alt="logo" styleClass="headerLogo" rendered="#{userSession.loggedIn}"/>
+                </a>
+            </div>
+            <div style="width: 400px;float: left;padding-top: 4px;">
+                <a href="${pageContext.request.servletPath}/dashboard.xhtml">
+                <span id="headLine">Tauschring
                 <span class="green">Hamburg</span></span>
-            </a>
+                </a>
+            </div>
+            <p:growl id="messages"/>
+
 
             <div class="userStuff">
                 <h:form styleClass="loginForm" rendered="#{userSession.notLoggedIn}">
@@ -83,6 +91,19 @@ Environmental damage caused by the use must be kept as small as possible.
             </div>
         </div>
     </div>
+    <h:panelGroup layout="block" styleClass="subheader" rendered="#{userSession.notLoggedIn}">
+        <div class="container" style="">
+            <div style="width: 180px;float: left;">
+                <a href="${pageContext.request.servletPath}/dashboard.xhtml">
+                    <h:graphicImage name="/img/logoGreen.png" alt="logo" styleClass="headerLogo2"/>
+                </a>
+            </div>
+            <div class="rightSubHead">
+                <h:graphicImage name="/img/header.gif" alt="logo"/>
+            </div>
+        </div>
+    </h:panelGroup>
+
     <div class="container, frame">
         <ui:insert name="content"/>
     </div>
