--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -39,25 +39,62 @@ Environmental damage caused by the use must be kept as small as possible.
             Bei Login werden jew. die aktuellsten 3 Überweisungen, neuste Mitglieder, neusten Angebote ... zu sehen sein.
         </p:panel>
 
-        <p:panel header="Kommende Termine" rendered="#{userSession.loggedIn}">
+        <h:panelGroup layout="block" class="horizontalFloatContainer" rendered="#{userSession.loggedIn}">
+            <p:panel header="Kommende Termine" rendered="#{userSession.loggedIn}" style="width: 510px; float: left">
+                <div style="text-align: center">
+                    <table class="borderlessTable">
+                        <ui:repeat value="#{userSession.next3EventsInternal}" var="event">
+                            <tr>
+                                <td>
+                                    <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{event.user.id}"><img
+                                            src="#{event.user.gravatarUrl29}" alt="#{event.user.displayName}"/></a>
+                                </td>
+                                <td><h:outputText value="#{event.dashboardDate}"/></td>
+                                <td style="text-align: center"><h:outputText value="#{event.period}"/></td>
+                                <td><h:outputText value="#{event.displayTitle}"/></td>
+                            </tr>
+                        </ui:repeat>
+                    </table>
+                    <a href="${pageContext.request.servletPath}/internal/events/browse.xhtml">Details und weitere Termine</a>
+                </div>
+            </p:panel>
 
-            <div style="text-align: center">
-                <table class="borderlessTable">
-                    <ui:repeat value="#{userSession.next3EventsInternal}" var="event">
-                        <tr>
-                            <td>
-                                <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{event.user.id}"><img
-                                        src="#{event.user.gravatarUrl29}" alt="#{event.user.displayName}"/></a>
-                            </td>
-                            <td><h:outputText value="#{event.dashboardDate}"/></td>
-                            <td style="text-align: center"><h:outputText value="#{event.period}"/></td>
-                            <td><h:outputText value="#{event.displayTitle}"/></td>
-                        </tr>
-                    </ui:repeat>
-                </table>
-                <a href="${pageContext.request.servletPath}/internal/events/browse.xhtml">Details und weitere Termine</a>
+            <div style="width: 20px; float: left">
+                <h:outputText value="&#160;"/>
             </div>
-        </p:panel>
+            <p:panel header="letzte konto aktivität" style="overflow: auto"
+                     rendered="#{not empty userSession.user.depotItems}">
+
+                <table class="borderlessTable">
+                    <tr>
+                        <td rowspan="4">
+                            <a href="${pageContext.request.servletPath}/internal/account.xhtml">
+                                <img alt="#{userSession.user.newestDepotItem.other.displayName}"
+                                     src="#{userSession.user.newestDepotItem.other.gravatarUrl80}"/>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Betrag:</td>
+                        <td>
+                            <a href="${pageContext.request.servletPath}/internal/account.xhtml">
+                                #{userSession.user.newestDepotItem.amount}</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Datum:</td>
+                        <td>#{userSession.user.newestDepotItem.shortFormattedDate}</td>
+                    </tr>
+                    <tr>
+                        <td>Mit:</td>
+                        <td>
+                            <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{userSession.user.newestDepotItem.other.id}">
+                                #{userSession.user.newestDepotItem.other.displayName}</a>
+                        </td>
+                    </tr>
+                </table>
+            </p:panel>
+        </h:panelGroup>
 
 
         <p:panel header="Kommende Termine" rendered="#{userSession.notLoggedIn}">
@@ -65,15 +102,15 @@ Environmental damage caused by the use must be kept as small as possible.
         </p:panel>
 
 
-
-        <h:panelGroup layout="block" style="width: 100%; vertical-align: bottom; display: inline-block;" rendered="#{userSession.loggedIn}">
+        <h:panelGroup layout="block" class="horizontalFloatContainer" rendered="#{userSession.loggedIn}">
             <p:panel header="Neuste Gesuche" rendered="#{userSession.loggedIn}" style="float: left; width: 46%;">
                 <table class="borderlessTable">
                     <ui:repeat value="#{userSession.newestRequests}" var="advertisement">
                         <tr>
                             <td>
                                 <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{advertisement.owner.id}"><img
-                                        src="#{advertisement.owner.gravatarUrl29}" alt="#{advertisement.owner.displayName}"/></a>
+                                        src="#{advertisement.owner.gravatarUrl29}"
+                                        alt="#{advertisement.owner.displayName}"/></a>
                             </td>
                             <td>
                                 <a href="#{advertisement.browseUrl}">
@@ -97,16 +134,17 @@ Environmental damage caused by the use must be kept as small as possible.
                         <tr>
                             <td>
                                 <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{advertisement.owner.id}"><img
-                                        src="#{advertisement.owner.gravatarUrl29}" alt="#{advertisement.owner.displayName}"/></a>
+                                        src="#{advertisement.owner.gravatarUrl29}"
+                                        alt="#{advertisement.owner.displayName}"/></a>
                             </td>
                             <td>
                                 <a href="#{advertisement.browseUrl}">
-                                <h:outputText value="#{advertisement.title}"/>
+                                    <h:outputText value="#{advertisement.title}"/>
                                 </a>
                             </td>
                             <td>
                                 <a href="#{advertisement.browseCategoryUrl}">
-                                <h:outputText value="#{advertisement.category.name}"/>
+                                    <h:outputText value="#{advertisement.category.name}"/>
                                 </a>
                             </td>
                         </tr>
@@ -116,18 +154,16 @@ Environmental damage caused by the use must be kept as small as possible.
         </h:panelGroup>
 
         <p:panel header="Neuste Mitglieder" rendered="#{userSession.loggedIn}">
-            <ui:repeat value="#{userSession.newestMembers8}" var="member">
+            <ui:repeat value="#{userSession.newestMembers9}" var="member">
                 <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{member.id}"><img
                         src="#{member.gravatarUrl80}" alt="#{member.displayName}"/></a>
             </ui:repeat>
         </p:panel>
         <p:panel header="Neuste Mitglieder" rendered="#{userSession.notLoggedIn}">
-        <ui:repeat value="#{userSession.getNewestMembers(8)}" var="member">
-            <img src="#{member.gravatarUrl80}"/>
-        </ui:repeat>
-    </p:panel>
-
-
+            <ui:repeat value="#{userSession.newestMembers9}" var="member">
+                <img src="#{member.gravatarUrl80}"/>
+            </ui:repeat>
+        </p:panel>
 
 
     </ui:define>
