--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -24,7 +24,8 @@ Environmental damage caused by the use must be kept as small as possible.
 <ui:composition template="/decorators/menuDecorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui" xmlns:h="http://java.sun.com/jsf/html">
+                xmlns:p="http://primefaces.org/ui" xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:r="http://www.tauschring-hamburg.org/public/ring">
     <ui:define name="contentWithMenu">
         <p:panel header="!!! Testseite !!!" style="background: red" rendered="#{userSession.notLoggedIn}">
             <p>Dies ist lediglich der Versuch einer neuen Tauschringseite.</p>
