--- a/src/main/webapp/decorators/advertisementDecorator.xhtml
+++ b/src/main/webapp/decorators/advertisementDecorator.xhtml
@@ -24,13 +24,14 @@ Environmental damage caused by the use must be kept as small as possible.
 <ui:composition template="/decorators/noMenuDecorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:r="http://www.tauschring-hamburg.org/public/ring">
     <ui:define name="contentWithoutMenu">
         <div class="menuContainer">
             <p:menu style="width:180px;" id="topAdMenu">
                 <p:menuitem value="Zurück" url="/dashboard.xhtml" icon="ui-icon-home"/>
                 <p:separator/>
-                <p:menuitem styleClass="#{userSession.activeMenu('internal/advertisements/create')}" value="Erstellen"
+                <p:menuitem styleClass="#{r:activeMenu('internal/advertisements/create')}" value="Erstellen"
                             url="/internal/advertisements/create.xhtml"
                             icon="ui-icon-document" rendered="#{userSession.loggedIn}"/>
 
