--- a/src/main/webapp/publicEvents.xhtml
+++ b/src/main/webapp/publicEvents.xhtml
@@ -29,7 +29,7 @@ Environmental damage caused by the use must be kept as small as possible.
     <ui:define name="contentWithMenu">
 
 
-        #{userSession.activeMenu('dashboard')}
+        #{r:activeMenu('dashboard')}
         #{facesContext.viewRoot.viewId.substring(1)}
         #{facesContext.viewRoot.viewId.startsWith('/dashboard')?'acticMenuItem':''}
 
